# tcplotter

./: .readthedocs.yaml  LICENSE  README.md  environment.yml  make_plots.ipynb  postBuild  requirements.txt  sample_data.csv  setup.py  tcplotter.ipynb  thermochron_plotter.ipynb
c/: Makefile
cpp/: Makefile
docs/: conf.py  index.rst  installation.ipynb  reference.rst  requirements.txt  usage.ipynb
docs/source/: conf.py
plotters/: eu_vs_radius.py  rate_vs_age_tc.py  rate_vs_radius_eu.py  time_vs_temp.py
src/c/: Makefile
src/cpp/: Makefile
tcplotter/: __init__.py  eu_vs_radius.py  rate_vs_age_tc.py  rate_vs_radius_eu.py  tcplotter.py  time_vs_temp.py
tcplotter/src/: CMakeLists.txt
tcplotter/src/RDAAM_He/: CMakeLists.txt  RDAAM.cpp  RDAAM.h
tcplotter/src/ketch_aft/: CMakeLists.txt
